# reels-trends

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml
scripts/: backtest_old_vs_new.py  backtest_trending.py
src/reels_trends/: __init__.py  config.py  main.py  pipeline.py  settings.py  telegram_format.py  workers.py
src/reels_trends/bot/: __init__.py  handlers.py  middleware.py  utils.py
src/reels_trends/db/: models.py  session.py  utils.py
src/reels_trends/pipeline/: __init__.py  apify.py  base.py  check_trends.py  daily_summary.py  scrape_posts.py  scrape_profiles.py
src/reels_trends/repository/: tasks.py
